# djmusic

./: README.md  pyproject.toml  pytest.ini
djmusic/: manage.py
djmusic/albums/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  validators.py  views.py
djmusic/albums/migrations/: 0001_initial.py  0002_alter_album_released_at.py  0003_alter_album_cost.py  0004_alter_album_created_at.py  0005_alter_album_created_at.py  0006_alter_album_created_at.py  0007_album_is_approved.py  0008_remove_album_created_at_album_created_album_modified.py  0009_song.py  0010_alter_song_image_alter_song_name.py
djmusic/albums/templates/albums/: create.html
djmusic/artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
djmusic/artists/migrations/: 0001_initial.py
djmusic/artists/templates/artists/: create.html  list.html
djmusic/artists/tests/: conftest.py  test_factories.py  test_views.py
djmusic/authentication/: serializers.py  urls.py  views.py
djmusic/authentication/tests/: conftest.py  test_factories.py  test_views.py
djmusic/djmusic/: asgi.py  settings.py  urls.py  wsgi.py
djmusic/musicplatform/: RESULTS.md
djmusic/users/: admin.py  models.py  serializers.py  urls.py  views.py
djmusic/users/migrations/: 0001_initial.py  0002_user_bio.py
djmusic/users/tests/: test_factories.py  test_views.py
